syntax = "proto3";
package de.flashyotter.blockchain_node.p2p.proto;

message Handshake {
  string nodeId = 1;
  string protocolVersion = 2;
  int32 listenPort = 3;
  string publicAddr = 4;
}

message NewBlock { bytes rawBlock = 1; }
message NewTx    { bytes rawTx = 1; }
message GetBlocks { int32 fromHeight = 1; }
message Blocks { repeated bytes rawBlocks = 1; }
message PeerList { repeated string peers = 1; }
message FindNode { string nodeId = 1; }
message Nodes { repeated string peers = 1; }

message Envelope {
  oneof msg {
    Handshake handshake = 1;
    NewBlock newBlock = 2;
    NewTx newTx = 3;
    GetBlocks getBlocks = 4;
    Blocks blocks = 5;
    PeerList peerList = 6;
    FindNode findNode = 7;
    Nodes nodes = 8;
  }
  string jwt = 16;
}
